Sun Dec 02 19:23:25 2001  George Lebl <jirka@5z.com>

	* panel-util.[ch], foobar-widget.c: implement a utility for 'event
	  streching', so that we can accept clicks on the edge of the
	  screen for example in foobar, no matter how wide the border of the
	  panel/menubar is.

Sun Dec 02 15:11:31 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c: get rid of some deprecated menu_bar function usage

Sun Dec 02 14:52:39 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c: fix pixmap loading, do Applications/Actions
	  setup as from nils's proposal (sort of).  Still needs a lot of
	  work.

2001-12-01  Seth Nickell  <snickell@stanford.edu>

	* foobar-widget.c: (foobar_widget_instance_init):

	Change menu name to "Applications" per Nils' panel
	menu design.
	
	* menu.c: (image_menu_shown):

	Icons for upper most menus should be loaded first. Most users
	start reading from top to bottom. When you load icons
	from bottom to top scanning is essentially disrupted until
	all icons are loaded.
	
Sat Dec 01 22:44:28 2001  George Lebl <jirka@5z.com>

	* menu.c: get rid of the large icon stuff, if we already have 
	  a GtkImage for the file we're looking for loaded, just use that,
	  makes the KDE screensaver menu icons load faster then a speeding
	  bullet (among others:).  Also fix the horizontal jump by directly
	  setting the empty image requisition.

Sat Dec 01 21:21:17 2001  George Lebl <jirka@5z.com>

	* menu.c: removed a bit of the jumpiness effect due to menu icons,
	  there is a horizontal one left which I don't understand.  Make sure
	  foldres without an icon get the folder icon.  Only load icons
	  after the item has been shown, meaning that preloading menus won't
	  start hogging the disk, also when an item is hidden it's no
	  longer loaded.  Change behaviour to FILO so that most recently
	  shown items get loaded first.

2001-12-01  Seth Nickell  <snickell@stanford.edu>

	* menu.c: (load_icons_handler), (show_item_menu),