@@ -1,3 +1,8 @@
+2001-12-03  Malcolm Tredinnick <malcolm@commsecure.com.au>
+	* menu.c: Replace a bunch of references to .gnome/ with the
+	  DOT_GNOME constant from <libgnome/gnome-init.h>. For now, this
+	  makes everything gravitate to $HOME/.gnome2/.
+
 Sun Dec 02 19:23:25 2001  George Lebl <jirka@5z.com>
 
 	* panel-util.[ch], foobar-widget.c: implement a utility for 'event
